k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistence-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: persistence-service
  template:
    metadata:
      labels:
        app: persistence-service
    spec:
      containers:
      - name: persistence-service
        image: stevegreghatch/persistence-service:latest
        ports:
        - containerPort: 8081
