k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-persistence-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: persistence-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
